z-index fix

--- a/src/App/blocks/Header/Header.st.css
+++ b/src/App/blocks/Header/Header.st.css
@@ -131,6 +131,8 @@
 @media (max-width: value(sizeScreenMdMax)) {
 
 	.root {
+		position: relative;
+		z-index: 4;
 		height: 70px;
 	}
 
